# VINS-GS

./: .gitignore  .gitmodules  README.MD  environment.yaml  environment.yml  launch_vins_gaussian.sh  odometryTestData  order.txt
output/: GSvio.txt  extrinsic_parameter.csv  vio.txt
output/EuRoC/MH/MH_01/: 1229vio.txt  GS1229vio.txt  VINS-Fusion.txt  VINS-Mono.txt  groundtruth.txt  vio.txt
output/EuRoC/MH/MH_02/: groundtruth.txt
output/EuRoC/MH/MH_03/: data.txt
output/EuRoC/MH/MH_04/: data.txt
output/EuRoC/MH/MH_05/: data.txt
output/EuRoC/VM/V1_01/: data.txt
output/EuRoC/VM/V1_02/: data.txt
output/EuRoC/VM/V1_03/: data.txt
output/EuRoC/VM/V2_01/: data.txt
output/EuRoC/VM/V2_02/: data.txt
output/EuRoC/VM/V2_03/: data.txt
output/M2DGRP/parking2/: parking2vio0312.txt  parking2vio1118.txt  parking2vio1119.txt  parking2vio1210.txt  parking2vio1229.txt  vio.txt
output/kasitVIO/circle/circle/: VINS-Fusion.txt  VINS-Mono.txt  groundtruth.txt  proposed-mono.txt
output/kasitVIO/circle/circle_fast/: VINS-Fusion.txt  VINS-Mono.txt  groundtruth.txt  proposed-mono.txt
output/kasitVIO/circle/circle_head/: VINS-Fusion.txt  groundtruth.txt
output/kasitVIO/infinite/infinite/: groundtruth.txt
output/kasitVIO/infinite/infinite_fast/: groundtruth.txt
output/kasitVIO/infinite/infinite_head/: groundtruth.txt
output/kasitVIO/rotation/rotation/: VINS-Fusion.txt  VINS-Mono.txt  groundtruth.txt  proposed-mono.txt
output/kasitVIO/rotation/rotation_fast/: VINS-Fusion.txt  VINS-Mono.txt  groundtruth.txt  proposed-mono.txt  result.txt
output/kasitVIO/square/square/: VINS-Fusion.txt  VINS-Mono.txt  groundtruth.txt  proposed-mono.txt  square-1218vio.txt
output/kasitVIO/square/square_fast/: VINS-Fusion.txt  VINS-Mono.txt  groundtruth.txt  proposed-mono.txt  square_fast-1219vio.txt
output/kasitVIO/square/square_head/: GS20260107vio.txt  VINS-Fusion.txt  VINS-Mono.txt  groundtruth.txt  proposed-mono.txt
src/: __init__.py  odometry_publisher.py
src/VINS-Fusion/config/: vins_rviz_config.rviz
src/VINS-Fusion/config/3DGS/: 3DGS.yaml
src/VINS-Fusion/config/3DGS_312/: 3DGS.yaml  camera.yaml  left.yaml
src/VINS-Fusion/config/3DGS_M2DGR/: 3DGS.yaml  camera.yaml
src/VINS-Fusion/config/3DGS_euroc/: MH_01.yaml  MH_02.yaml  camera.yaml
src/VINS-Fusion/config/3DGS_kasit/: camera.yaml  circle.yaml  circle_fast.yaml  circle_head.yaml  groudtruth.txt  rotation.yaml  rotation_fast.yaml  square.yaml  (+2 more)
src/VINS-Fusion/gaussian_map/: CMakeLists.txt  package.xml
src/VINS-Fusion/gaussian_map/launch/: extract.launch  gaussian_map.launch
src/VINS-Fusion/gaussian_map/scripts/: gaussian_map.py  image_saver.py  odometry_publisher.py  render_withconf.py  visual_ply.py  visual_ply_.py
src/VINS-Fusion/gaussian_msg/: CMakeLists.txt  package.xml
src/VINS-Fusion/gaussian_msg/msg/: BoundingBoxes.msg  image_with_pose.msg
src/VINS-Fusion/vins_estimator/: CMakeLists.txt  package.xml
src/VINS-Fusion/vins_estimator/launch/: export.launch  extract_compressed_timestr.py  extract_filter.py  extract_lidar_timestr.py  extract_timestr.py  image2mp4.py  merge.py  vins_rviz.launch
src/VINS-Fusion/vins_estimator/src/: rosNodeTest.cpp  shared_objects.cc  shared_objects.h
src/VINS-Fusion/vins_estimator/src/estimator/: estimator.cpp  estimator.h  feature_manager.h  gaussian_fusion.cpp  parameters.cpp  parameters.h
src/VINS-Fusion/vins_estimator/src/factor/: GS_factor.cpp  GS_factor.h
src/VINS-Fusion/vins_estimator/src/featureTracker/: feature_tracker.cpp  feature_tracker.h
src/VINS-Fusion/vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h
src/VINS-Fusion/vins_estimator/src/sp_sg/: sp_sg_config.yaml  super_glue.cpp  super_glue.h  super_point.cpp  super_point.h  utils.h
src/VINS-Fusion/vins_estimator/src/sp_sg/weights/: superpoint_v1_sim_int32.engine
src/VINS-Fusion/vins_estimator/src/utility/: renderpnp.cpp  renderpnp.h  visualization.cpp  visualization.h
src/splatting/: order.txt  render_withconf.py  train.py
src/splatting/arguments/: __init__.py
src/splatting/gaussian_renderer/: __init__.py
src/splatting/output/: cameras.json  cfg_args
src/splatting/scene/: __init__.py  cameras.py  dataset_readers.py  gaussian_model.py
src/splatting/utils/: camera_utils.py  graphics_utils.py
(+24 files in other folders)
