<?xml version="1.0"?>
<package format="2">
  <name>gaussian_map</name>
  <version>1.0.1</version>
  <description>The gaussian_map package</description>

  <maintainer email="xujinle@seu.edu.cn"> Xujinle</maintainer>

  <license>APLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <depend>message_runtime</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>